--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,20 @@
-FROM node:21.2.0.
+# Definimos una imagen base de node y su versión para nuestro contenedor
+FROM node:20.16.0
 
+# Definimos el directorio de trabajo dentro del contenedor 
 WORKDIR /app
 
+# Copiamos el archivo package.json a la carpeta de trabajo
 COPY package.json .
 
+# Instalamos las dependencias del proyecto
 RUN npm install
 
+# Copiamos el resto de los archivos a la carpeta de trabajo
 COPY . .
 
+# Exponemos el puerto 8080
 EXPOSE 8088
 
+# Definimos el comando para correr nuestra aplicación
 CMD [ "npm", "start" ]
